@@ -12,6 +12,9 @@ Version 0.9.4 -> 0.9.5
 * fix hang when open()/close() is called while waiting in a sync
 * fix MJPEG recording on zr36016/zr36050 cards. -d4 doesn't work,
     field order is reversed and there's ~64 lines of noise at the top...
+* s/debug/zr_debug/ to fix symbol conflict for in-kernel code
+* Add pci_disable_device() in card release function
+* fix memleaks in i2c client error cases
 
 Version 0.9.3 -> 0.9.4
 ----------------------
